<resources>
    <string name="app_name">Bookworm</string>
    <string name="action_settings">Settings</string>
    <string name="action_verification">Verification</string>
    <string name="action_booklist" translatable="false">Browse Books</string>
    <string name="action_my_booklist" translatable="false">My Books</string>
    <string name="action_profile" translatable="false">Profile</string>
    <string name="action_newsfeed" translatable="false">Newsfeed</string>
    <string name="title_activity_news_feed">Newsfeed</string>
    <string name="facebook_app_id">694420340661430</string>
    <string name="title_activity_facebook_login">FacebookLogin</string>
    <string name="title_activity_post_detail">PostDetail</string>
    <string name="comment">Enter your comment</string>
    <string name="title_activity_friend_list">Friend List</string>
    <string name="action_friendlist">My Friends</string>


    <string name="title_activity_book_list">Browse Books</string>
    <string name="title_activity_book_detail">Book Detail</string>
    <string name="title_activity_my_book_list_categories">My Books</string>
    <string name="title_activity_my_book_list">My BookList</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_facebook">Facebook Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_follow_requests">Follow Requests</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_review_detail">ReviewDetail</string>
    <string name="title_activity_verification">Verification</string>
    <string name="title_activity_follow_requests">FollowRequests</string>

</resources>
