<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".Newsfeed">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_booklist"
        android:title="@string/action_booklist"
        android:orderInCategory="3"
        app:showAsAction="never"/>
    <item android:id="@+id/action_my_booklist"
        android:title="@string/action_my_booklist"
        android:orderInCategory="2"
        app:showAsAction="never"/>
    <item android:id="@+id/action_profile"
        android:title="@string/action_profile"
        android:orderInCategory="1"
        app:showAsAction="never"/>
    <item android:id="@+id/action_friendlist"
        android:title="@string/action_friendlist"
        android:orderInCategory="2"
        app:showAsAction="never"/>
</menu>
